upgrade to support java 17+